plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.3'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.biengual'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    /**
     * If any dependency is added, please classify by using comments for others.
     * If some dependency is not suitable classification, anyone can change that.
     */
    implementation project(':biengual-core')

    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.javassist:javassist:3.15.0-GA'
    implementation 'javax.xml.bind:jaxb-api:2.3.1' //xml 문서와 자바 객체 간 매핑을 자동화
    implementation 'javax.servlet:javax.servlet-api:4.0.1'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    // JWT OAuth
    implementation 'io.jsonwebtoken:jjwt:0.9.1' //자바 jwt  라이브러리
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' //OAuth2 의존성 추가

    // MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'

    // MongoDB
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.redisson:redisson-spring-boot-starter:3.27.0'

    // Querydsl
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // Selenium
    implementation 'org.seleniumhq.selenium:selenium-java:4.25.0'
    implementation 'io.github.bonigarcia:webdrivermanager:5.8.0'

    // Google API
    // Google API Client
    implementation 'com.google.api-client:google-api-client:1.34.0' // 최신 안정 버전
    // YouTube Data API
    implementation 'com.google.apis:google-api-services-youtube:v3-rev20240916-2.0.0' // 최신 안정 버전
    // Google HTTP Client for JSON
    implementation 'com.google.http-client:google-http-client-gson:1.39.2'
    // Google Credentials
    implementation 'com.google.auth:google-auth-library-oauth2-http:1.19.0'

    // Jsoup
    implementation 'org.jsoup:jsoup:1.17.2'

    // Microsoft Azure Translator
    implementation "com.squareup.okhttp3:okhttp:4.10.0"
    implementation "com.google.code.gson:gson:2.9.0"

    // MapStruct
    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.1.0'

    // Flyway
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

    // StringUtils
    implementation 'org.apache.commons:commons-lang3:3.17.0'

    // Batch
    implementation 'org.springframework.boot:spring-boot-starter-batch'

    // Stanford CoreNLP
    implementation 'edu.stanford.nlp:stanford-corenlp:4.5.5'
    implementation 'edu.stanford.nlp:stanford-corenlp:4.5.5:models'

    // Word2Vec
    implementation 'org.deeplearning4j:deeplearning4j-nlp:1.0.0-M2.1'
    implementation 'org.nd4j:nd4j-native-platform:1.0.0-M2.1'

    // Perplexity AI
    implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'
    // Unirest
    implementation 'com.konghq:unirest-java:3.14.5'

    // OpenSearch
    // OpenSearch Java SDK (최신 방식)
    implementation 'org.opensearch.client:opensearch-java:2.17.0'

    // OpenSearch REST Client (필수)
    implementation 'org.opensearch.client:opensearch-rest-client:2.17.0'

    // Jackson 라이브러리 (JSON 직렬화/역직렬화)
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
}

def querydslDir = "$buildDir/generated/querydsl"

sourceSets {
    main.java.srcDirs += [querydslDir]
}

tasks.withType(JavaCompile) {
    options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
}

clean.doLast {
    file(querydslDir).deleteDir()
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('bootJar') {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    enabled = true
}

tasks.named('jar') {
    enabled = false
}
